--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -26,11 +26,18 @@
   background-color: var(--color-grey-dark-1);
 
   flex: 0 0 18%; // short cut, 0: Not grow, 0: Not shrink, basis:width (18%)
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: var(--color-white);
+
+  // TESTING
   background-color: var(--color-testing);
+  height: 80rem;
 
   flex: 1; //Element will grow to fill the entire available space
 }
