--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,21 @@ body {
   text-align: center;
   padding: 2.5rem; }
 
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+.overview {
+  display: flex; }
+  .overview__stars {
+    margin-right: auto; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary); }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -199,6 +214,5 @@ body {
 
 .hotel-view {
   background-color: var(--color-white);
-  background-color: var(--color-testing);
   height: 80rem;
   flex: 1; }
