--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -183,3 +183,46 @@
   text-align: center;
   padding: 2.5rem;
 }
+
+//////////////////////////////
+// 6. HOTEL GALLERY PHOTOS
+.gallery {
+  display: flex;
+
+  &__photo {
+    width: 100%;
+    display: block;
+  }
+}
+
+//////////////////////////////
+// 7. HOTEL OVERVIEW
+.overview {
+  display: flex;
+
+  &__heading {
+  }
+
+  &__stars {
+    margin-right: auto;
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+  }
+
+  &__location {
+  }
+
+  &__rating {
+  }
+
+  &__rating-count {
+  }
+
+  &__rating-average {
+  }
+}
