--- a/css/style.css
+++ b/css/style.css
@@ -274,3 +274,16 @@ body {
   background-color: var(--color-white);
   height: 80rem;
   flex: 1; }
+
+.detail {
+  display: flex;
+  padding: 4.5rem; }
+
+.description {
+  background-color: orangered;
+  flex: 0 0 60%;
+  margin-right: 4.5rem; }
+
+.user-reviews {
+  background-color: yellowgreen;
+  flex: 1; }
