--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -40,3 +40,19 @@
 
   flex: 1; //Element will grow to fill the entire available space
 }
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+}
+
+.description {
+  background-color: orangered;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+}
+
+.user-reviews {
+  background-color: yellowgreen;
+  flex: 1;
+}
