--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,9 @@ Grey dark 3: #999
   --color-grey-dark-3: #999;
   --color-white: #fff;
   --color-testing: orangered;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3); }
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  --line: 1px solid var(--color-grey-light-2); }
 
 * {
   margin: 0;
@@ -180,7 +182,7 @@ body {
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2); }
+  border-bottom: var(--line); }
   .overview__heading {
     font-size: 2.25rem;
     font-weight: 300;
@@ -255,7 +257,7 @@ body {
   font-size: 1.4rem;
   height: 7rem;
   background-color: var(--color-white);
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center; }
@@ -272,17 +274,21 @@ body {
 
 .hotel-view {
   background-color: var(--color-white);
-  height: 80rem;
   flex: 1; }
 
 .detail {
   display: flex;
-  padding: 4.5rem; }
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line); }
 
 .description {
-  background-color: orangered;
+  font-size: 1.4rem;
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-light);
   flex: 0 0 60%;
-  margin-right: 4.5rem; }
+  margin-right: 4.5rem;
+  padding: 3rem; }
 
 .user-reviews {
   background-color: yellowgreen;
