--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: var(--color-white);
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 
   display: flex;
   justify-content: space-between;
@@ -35,21 +35,23 @@
 .hotel-view {
   background-color: var(--color-white);
 
-  // TESTING
-  height: 80rem;
-
   flex: 1; //Element will grow to fill the entire available space
 }
 
 .detail {
   display: flex;
   padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line);
 }
 
 .description {
-  background-color: orangered;
+  font-size: 1.4rem;
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-light);
   flex: 0 0 60%;
   margin-right: 4.5rem;
+  padding: 3rem;
 }
 
 .user-reviews {
