--- a/css/style.css
+++ b/css/style.css
@@ -219,21 +219,27 @@ body {
   .overview__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase; }
-  .overview .btn-inline {
-    border: none;
-    color: var(--color-primary);
-    font-size: inherit;
-    border-bottom: 1px solid currentColor;
-    padding-bottom: 2px;
-    display: inline-block;
-    background-color: transparent;
-    cursor: pointer;
-    transition: all 0.2s; }
-    .overview .btn-inline:hover {
-      color: var(--color-grey-dark-1); }
-    .overview .btn-inline:focus {
-      outline: none;
-      animation: pulsate 1s infinite; }
+
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.2s; }
+  .btn-inline span {
+    margin-left: 3px;
+    transition: margin-left 0.2s; }
+  .btn-inline:hover {
+    color: var(--color-grey-dark-1); }
+    .btn-inline:hover span {
+      margin-left: 8px; }
+  .btn-inline:focus {
+    outline: none;
+    animation: pulsate 1s infinite; }
 
 @keyframes pulsate {
   0% {
@@ -377,4 +383,7 @@ body {
   padding: 3rem; }
 
 .user-reviews {
-  flex: 1; }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
