--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center; }
+  @media only screen and (max-width: 31.25em) {
+    .search {
+      order: 1;
+      flex: 0 0 100%; } }
   .search__input {
     font-family: inherit;
     font-size: inherit;
@@ -74,6 +78,9 @@ body {
     width: 90%;
     transition: all 0.2s;
     margin: -3.25rem; }
+    @media only screen and (max-width: 31.25em) {
+      .search__input {
+        justify-content: right; } }
     .search__input:focus {
       outline: none;
       width: 100%;
@@ -135,7 +142,7 @@ body {
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem; }
-  @media only screen and (max-width: 65.25em) {
+  @media only screen and (max-width: 56.25em) {
     .side-nav {
       display: flex;
       margin: 0; } }
@@ -143,10 +150,10 @@ body {
     position: relative; }
     .side-nav__item:not(:last-child) {
       margin-bottom: 0.5rem; }
-      @media only screen and (max-width: 65.25em) {
+      @media only screen and (max-width: 56.25em) {
         .side-nav__item:not(:last-child) {
           margin-bottom: 0; } }
-    @media only screen and (max-width: 65.25em) {
+    @media only screen and (max-width: 56.25em) {
       .side-nav__item {
         flex: 1; } }
   .side-nav__item::before {
@@ -174,22 +181,32 @@ body {
     z-index: 10;
     display: flex;
     align-items: center; }
-    @media only screen and (max-width: 65.25em) {
+    @media only screen and (max-width: 56.25em) {
       .side-nav__link:link, .side-nav__link:visited {
         justify-content: center;
         padding: 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        flex-direction: column;
+        padding: 1.5rem 0.5rem; } }
   .side-nav__icon {
     width: 1.75rem;
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor; }
+    @media only screen and (max-width: 37.5em) {
+      .side-nav__icon {
+        margin-right: 0;
+        margin-bottom: 0.7rem;
+        width: 1.5rem;
+        height: 1.5rem; } }
 
 .legal {
   font-size: 1.2rem;
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem; }
-  @media only screen and (max-width: 65.25em) {
+  @media only screen and (max-width: 56.25em) {
     .legal {
       display: none; } }
 
@@ -209,6 +226,10 @@ body {
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__heading {
+        font-size: 1.8rem;
+        padding: 1.25rem 2rem; } }
   .overview__stars {
     margin-right: auto;
     display: flex; }
@@ -232,13 +253,22 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__rating {
+        padding: 0 1.5rem; } }
   .overview__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-top: -6px; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__rating-average {
+        font-size: 1.8rem; } }
   .overview__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__rating-count {
+        font-size: 0.5rem; } }
 
 .btn-inline {
   border: none;
@@ -292,11 +322,16 @@ body {
     height: 1rem;
     width: 1rem;
     margin-right: 0.7rem;
-    background-color: var(--color-primary);
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
-    mask-image: url(../img/chevron-thin-right.svg);
-    mask-size: cover; }
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover; }
+    @supports (-webkit-mask-image: url()) or (webkit-mask-image: url()) {
+      .list__item::before {
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size: cover;
+        background-image: none; } }
 
 .recommend {
   font-size: 1.3rem;
@@ -323,7 +358,7 @@ body {
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden; }
-  @media only screen and (max-width: 65.25em) {
+  @media only screen and (max-width: 56.25em) {
     .review {
       padding: 2rem;
       margin-bottom: 3rem; } }
@@ -367,7 +402,7 @@ body {
 .cta {
   padding: 3.5rem 0;
   text-align: center; }
-  @media only screen and (max-width: 65.25em) {
+  @media only screen and (max-width: 56.25em) {
     .cta {
       padding: 2.5rem 0; } }
   .cta__book-now {
@@ -429,10 +464,15 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 31.25em) {
+    .header {
+      flex-wrap: wrap;
+      align-content: space-around;
+      height: 11rem; } }
 
 .content {
   display: flex; }
-  @media only screen and (max-width: 65.25em) {
+  @media only screen and (max-width: 56.25em) {
     .content {
       flex-direction: column; } }
 
@@ -453,10 +493,10 @@ body {
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line); }
-  @media only screen and (max-width: 65.25em) {
+  @media only screen and (max-width: 56.25em) {
     .detail {
       padding: 3rem; } }
-  @media only screen and (max-width: 65.25em) {
+  @media only screen and (max-width: 37.5em) {
     .detail {
       flex-direction: column; } }
 
@@ -466,16 +506,20 @@ body {
   flex: 0 0 60%;
   margin-right: 4.5rem;
   padding: 3rem; }
-  @media only screen and (max-width: 65.25em) {
+  @media only screen and (max-width: 56.25em) {
     .description {
       padding: 2rem;
       margin-right: 3rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .description {
+      margin-right: 0;
+      margin-bottom: 3rem; } }
 
 .user-reviews {
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center; }
-  @media only screen and (max-width: 65.25em) {
+  @media only screen and (max-width: 56.25em) {
     .user-reviews {
       flex-direction: column; } }
